--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class='title'>
 	<h1 class='title_text'>Time since Anas watched Episode </h1>
 	<h1 class='title_text' id='eps_watched_text'>-</h1>
-	<h1 class='title_text'> of Payitaht Abdulhamid</h1>
+	<h1 class='title_text'> of Payitaht Abdülhamid</h1>
 </div>
 
 <div class='timer_container'>
